--- a/front/src/components/Restaurants/RestaurantsList/RestaurantsList.css
+++ b/front/src/components/Restaurants/RestaurantsList/RestaurantsList.css
@@ -1,5 +1,5 @@
  .restList {
-     justify-content: space-between;
+     justify-content: center;
      align-items: center;
      padding: 50px 44px;
      gap: 10px;
