--- a/front/src/components/Cart/CartList/CartList.css
+++ b/front/src/components/Cart/CartList/CartList.css
@@ -11,6 +11,13 @@
     top: 0;
 }
 
+.cartList .empty {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center
+}
+
 .cartList.show {
     transform: translateX(0);
 }
@@ -52,4 +59,15 @@
 .cartList .btns button.checkout:hover {
     background-color: rgb(195 195 46);
     ;
+}
+
+.total {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 96%;
+}
+
+.total span {
+    color: var(--main-color);
 }
